Add project links to readme.md and sites

--- a/01-background-colour-picker/index.html
+++ b/01-background-colour-picker/index.html
@@ -15,8 +15,12 @@
     <header>
       <nav>
         <ul>
-          <li>🎨 Background Colour Picker</li>
-          <li>Hex Codes</li>
+          <li><a href="">🎨 Background Colour Picker</a></li>
+          <li>
+            <a href="https://vanilla-javascript-projects.netlify.app"
+              >Back to Main ➡️</a
+            >
+          </li>
         </ul>
       </nav>
     </header>
