--- a/index.html
+++ b/index.html
@@ -47,14 +47,18 @@
         <h2>Projects</h2>
         <ul class="project-list">
           <li class="project-item">
-            <a href="">
+            <a
+              href="https://vanilla-javascript-projects.netlify.app/01-background-colour-picker/"
+            >
               <figure>
                 <img
                   src="00-assets/images/projects/background-colour-picker.png"
                   alt="Background Colour Picker"
                 />
                 <figcaption>
-                  <div class="project-item-title">Background Colour Picker</div>
+                  <div class="project-item-title">
+                    Background Colour Picker 🎨
+                  </div>
                   <div class="project-item-content">
                     Array, loops, DOM manipulation
                   </div>
