--- a/01-background-colour-picker/index.html
+++ b/01-background-colour-picker/index.html
@@ -17,9 +17,7 @@
         <ul>
           <li><a href="">🎨 Background Colour Picker</a></li>
           <li>
-            <a href="https://vanilla-javascript-projects.netlify.app"
-              >Back to Main ➡️</a
-            >
+            <a href="/">Back to Main ➡️</a>
           </li>
         </ul>
       </nav>
