--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
         <h2>Projects</h2>
         <ul class="project-list">
           <li class="project-item">
-            <a
-              href="https://vanilla-javascript-projects.netlify.app/01-background-colour-picker/"
-            >
+            <a href="/01-background-colour-picker/">
               <figure>
                 <img
                   src="00-assets/images/projects/background-colour-picker.png"
