Add project #2: Number guessing game

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a href="/01-background-colour-picker/">
               <figure>
                 <img
-                  src="00-assets/images/projects/background-colour-picker.png"
+                  src="00-assets/images/projects/01-background-colour-picker.png"
                   alt="Background Colour Picker"
                 />
                 <figcaption>
@@ -64,49 +64,18 @@
               </figure>
             </a>
           </li>
+
           <li class="project-item">
             <a href="">
               <figure>
                 <img
-                  src="00-assets/images/projects/background-colour-picker.png"
-                  alt="Background Colour Picker"
+                  src="00-assets/images/projects/02-number-guessing-game.png"
+                  alt="Number Guessing Game"
                 />
                 <figcaption>
-                  <div class="project-item-title">Background Colour Picker</div>
+                  <div class="project-item-title">Number Guessing Game 🎲</div>
                   <div class="project-item-content">
-                    Array, loops, DOM manipulation
-                  </div>
-                </figcaption>
-              </figure>
-            </a>
-          </li>
-          <li class="project-item">
-            <a href="">
-              <figure>
-                <img
-                  src="00-assets/images/projects/background-colour-picker.png"
-                  alt="Background Colour Picker"
-                />
-                <figcaption>
-                  <div class="project-item-title">Background Colour Picker</div>
-                  <div class="project-item-content">
-                    Array, loops, DOM manipulation
-                  </div>
-                </figcaption>
-              </figure>
-            </a>
-          </li>
-          <li class="project-item">
-            <a href="">
-              <figure>
-                <img
-                  src="00-assets/images/projects/background-colour-picker.png"
-                  alt="Background Colour Picker"
-                />
-                <figcaption>
-                  <div class="project-item-title">Background Colour Picker</div>
-                  <div class="project-item-content">
-                    Array, loops, DOM manipulation
+                    Functions, control flow, DOM manipulation
                   </div>
                 </figcaption>
               </figure>
