--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </li>
 
           <li class="project-item">
-            <a href="">
+            <a href="02-number-guessing-game/">
               <figure>
                 <img
                   src="00-assets/images/projects/02-number-guessing-game.png"
