Add metadata to project #2

--- a/02-number-guessing-game/index.html
+++ b/02-number-guessing-game/index.html
@@ -2,7 +2,51 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"
+    />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+    <meta property="og:title" content="Guess The Number! 🎲" />
+    <meta
+      property="og:description"
+      content="Guess the correct number between 1 and 30. You only have 5 guesses before it's game over!"
+    />
+    <meta
+      property="og:url"
+      content="https://vanillajs-only.netlify.app/02-number-guessing-game/"
+    />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/kimberlywanst/vanilla-javascript-projects/master/00-assets/images/projects/markdown/02-number-guessing-game.jpg"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Vanilla JavaScript Projects" />
+    <meta property="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@kimberlywanst" />
+    <meta name="twitter:creator" content="@kimberlywanst" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="../00-assets/images/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../00-assets/images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../00-assets/images/favicon/favicon-16x16.png"
+    />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -14,9 +58,8 @@
     <header>
       <nav>
         <ul>
-          <li><a href="">Guess The Number! 🎲</a></li>
           <li>
-            <a href="/">Back to Main ➡️</a>
+            <a href="/">Home ➡️</a>
           </li>
         </ul>
       </nav>
@@ -47,13 +90,13 @@
 
     <footer>
       <nav>
-        <ul class="footer-left">
+        <ul class="about">
           <li>
             Made with <span role="img" aria-label="heart">❤️</span> by Kimberly
             <span role="img" aria-label="sparkles">✨</span>
           </li>
         </ul>
-        <ul class="footer-right">
+        <ul class="social">
           <li>
             <a href="https://twitter.com/kimberlywanst" target="_blank"
               ><span class="fab fa-twitter" aria-hidden="true"></span
