--- a/02-number-guessing-game/index.html
+++ b/02-number-guessing-game/index.html
@@ -27,7 +27,7 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Vanilla JavaScript Projects" />
-    <meta property="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@kimberlywanst" />
     <meta name="twitter:creator" content="@kimberlywanst" />
     <link
