Add link preview for Project #5

--- a/05-pig-dice-game/index.html
+++ b/05-pig-dice-game/index.html
@@ -13,15 +13,21 @@
       content="black-translucent"
     />
     <meta property="og:title" content="Pig Dice Game 🎲" />
-    <meta property="og:description" content="" />
-    <meta property="og:url" content="" />
+    <meta
+      property="og:description"
+      content="Roll the die as many times as you want! Hold your current score before '1' is rolled. First player to score 100 or more points wins."
+    />
+    <meta
+      property="og:url"
+      content="https://vanillajs-only.netlify.app/05-pig-dice-game"
+    />
     <meta
       property="og:image"
       content="../00-assets/images/projects/markdown/05-pig-dice-game.jpg"
     />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Vanilla JavaScript Projects" />
-    <meta property="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@kimberlywanst" />
     <meta name="twitter:creator" content="@kimberlywanst" />
     <link
