--- a/index.html
+++ b/index.html
@@ -2,7 +2,45 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"
+    />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+    <meta property="og:title" content="Vanilla JavaScript Projects ✨" />
+    <meta
+      property="og:description"
+      content="A collection of JavaScript projects that I've built using HTML, CSS and plain JavaScript"
+    />
+    <meta property="og:url" content="https://vanillajs-only.netlify.app/" />
+    <meta property="og:image" content="" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Vanilla JavaScript Projects" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@kimberlywanst" />
+    <meta name="twitter:creator" content="@kimberlywanst" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="../00-assets/images/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../00-assets/images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../00-assets/images/favicon/favicon-16x16.png"
+    />
     <link rel="stylesheet" href="00-assets/style.css" />
     <link
       rel="stylesheet"
@@ -36,7 +74,7 @@
 
     <main>
       <section>
-        <h1>Vanilla JavaScript Projects</h1>
+        <h1>✨ Vanilla JavaScript Projects ✨</h1>
         <p>
           A collection of JavaScript projects that I've built using HTML, CSS
           and plain JavaScript
@@ -47,18 +85,16 @@
         <h2>Projects</h2>
         <ul class="project-list">
           <li class="project-item">
-            <a href="/01-background-colour-picker/">
+            <a href="/05-pig-dice-game/">
               <figure>
                 <img
-                  src="00-assets/images/projects/01-background-colour-picker.png"
-                  alt="Background Colour Picker"
+                  src="00-assets/images/projects/05-pig-dice-game.png"
+                  alt="Pig Dice Game"
                 />
                 <figcaption>
-                  <div class="project-item-title">
-                    Background Colour Picker 🎨
-                  </div>
+                  <div class="project-item-title">Pig Dice Game 🎲</div>
                   <div class="project-item-content">
-                    Array, loops, DOM manipulation
+                    Functions, control flow, DOM manipulation
                   </div>
                 </figcaption>
               </figure>
@@ -76,6 +112,25 @@
                   <div class="project-item-title">Number Guessing Game 🎲</div>
                   <div class="project-item-content">
                     Functions, control flow, DOM manipulation
+                  </div>
+                </figcaption>
+              </figure>
+            </a>
+          </li>
+
+          <li class="project-item">
+            <a href="/01-background-colour-picker/">
+              <figure>
+                <img
+                  src="00-assets/images/projects/01-background-colour-picker.png"
+                  alt="Background Colour Picker"
+                />
+                <figcaption>
+                  <div class="project-item-title">
+                    Background Colour Picker 🎨
+                  </div>
+                  <div class="project-item-content">
+                    Array, loops, DOM manipulation
                   </div>
                 </figcaption>
               </figure>
