--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
 
     <footer>
       <nav>
-        <ul class="nav-left">
+        <ul class="about">
           <li>
             Made with <span role="img" aria-label="heart">❤️</span> by Kimberly
             <span role="img" aria-label="sparkles">✨</span>
           </li>
         </ul>
-        <ul class="nav-right">
+        <ul class="social">
           <li>
             <a href="https://twitter.com/kimberlywanst" target="_blank"
               ><span class="fab fa-twitter" aria-hidden="true"></span
