Update starter files

--- a/00-assets/starter/index.html
+++ b/00-assets/starter/index.html
@@ -13,12 +13,16 @@
       content="black-translucent"
     />
     <meta property="og:title" content="" />
+    // TODO:
     <meta property="og:description" content="" />
+    // TODO:
     <meta property="og:url" content="" />
+    // TODO:
     <meta property="og:image" content="" />
+    // TODO:
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Vanilla JavaScript Projects" />
-    <meta property="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@kimberlywanst" />
     <meta name="twitter:creator" content="@kimberlywanst" />
     <link
@@ -44,6 +48,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
     <title>Document</title>
+    // TODO:
   </head>
   <body>
     <header>
