--- a/03-sliding-sign-up-login-form/index.html
+++ b/03-sliding-sign-up-login-form/index.html
@@ -12,10 +12,19 @@
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
     />
-    <meta property="og:title" content="" />
-    <meta property="og:description" content="" />
-    <meta property="og:url" content="" />
-    <meta property="og:image" content="" />
+    <meta property="og:title" content="Sliding Sign Up & Login Form" />
+    <meta
+      property="og:description"
+      content="Double slider for sign up and login form"
+    />
+    <meta
+      property="og:url"
+      content="https://vanillajs-only.netlify.app/03-sliding-sign-up-login-form"
+    />
+    <meta
+      property="og:image"
+      content="../00-assets/images/projects/markdown/03-sliding-sign-up-login-form.png"
+    />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Vanilla JavaScript Projects" />
     <meta name="twitter:card" content="summary" />
@@ -57,6 +66,7 @@
     </header>
 
     <main>
+      <h1>Sliding Sign Up & Login Form</h1>
       <div class="container" id="container">
         <div class="form-container signup-container">
           <form action="#">
