Update starter files

--- a/00-assets/starter/index.html
+++ b/00-assets/starter/index.html
@@ -13,13 +13,13 @@
       content="black-translucent"
     />
     <meta property="og:title" content="" />
-    // TODO:
+    <!-- TODO: -->
     <meta property="og:description" content="" />
-    // TODO:
-    <meta property="og:url" content="" />
-    // TODO:
+    <!-- TODO: -->
+    <meta property="og:url" content="https://vanillajs-only.netlify.app/" />
+    <!-- TODO: -->
     <meta property="og:image" content="" />
-    // TODO:
+    <!-- TODO: absolute URL from GitHub img -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Vanilla JavaScript Projects" />
     <meta name="twitter:card" content="summary" />
@@ -48,7 +48,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
     <title>Document</title>
-    // TODO:
+    <!-- TODO: -->
   </head>
   <body>
     <header>
