--- a/06-photo-gallery/index.html
+++ b/06-photo-gallery/index.html
@@ -23,7 +23,10 @@
       content="https://vanillajs-only.netlify.app/06-photo-gallery"
     />
 
-    <meta property="og:image" content="" />
+    <meta
+      property="og:image"
+      content="https://github.com/kimberlywanst/vanilla-javascript-projects/blob/main/00-assets/images/projects/markdown/06-photo-gallery.png"
+    />
 
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Vanilla JavaScript Projects" />
