Add projects to showcase ✨

--- a/index.html
+++ b/index.html
@@ -85,10 +85,27 @@
         <h2>Projects</h2>
         <ul class="project-list">
           <li class="project-item">
+            <a href="/06-photo-gallery/">
+              <figure>
+                <img
+                  src="00-assets/images/projects/markdown/06-photo-gallery.png"
+                  alt="Photo Gallery"
+                />
+                <figcaption>
+                  <div class="project-item-title">Photo Gallery 📸</div>
+                  <div class="project-item-content">
+                    Event listeners, DOM manipulation
+                  </div>
+                </figcaption>
+              </figure>
+            </a>
+          </li>
+
+          <li class="project-item">
             <a href="/05-pig-dice-game/">
               <figure>
                 <img
-                  src="00-assets/images/projects/05-pig-dice-game.png"
+                  src="00-assets/images/projects/markdown/05-pig-dice-game.png"
                   alt="Pig Dice Game"
                 />
                 <figcaption>
@@ -102,10 +119,46 @@
           </li>
 
           <li class="project-item">
+            <a href="/04-popup-modal-window">
+              <figure>
+                <img
+                  src="00-assets/images/projects/markdown/04-popup-modal-window.png"
+                  alt="Popup modal window"
+                />
+                <figcaption>
+                  <div class="project-item-title">Popup Modal Window</div>
+                  <div class="project-item-content">
+                    Event listeners, DOM manipulation
+                  </div>
+                </figcaption>
+              </figure>
+            </a>
+          </li>
+
+          <li class="project-item">
+            <a href="/03-sliding-sign-up-login-form">
+              <figure>
+                <img
+                  src="00-assets/images/projects/markdown/03-sliding-sign-up-login-form.gif"
+                  alt="Sliding Dual Form"
+                />
+                <figcaption>
+                  <div class="project-item-title">
+                    Sliding sign up & login form
+                  </div>
+                  <div class="project-item-content">
+                    Event listeners, DOM manipulation
+                  </div>
+                </figcaption>
+              </figure>
+            </a>
+          </li>
+
+          <li class="project-item">
             <a href="02-number-guessing-game/">
               <figure>
                 <img
-                  src="00-assets/images/projects/02-number-guessing-game.png"
+                  src="00-assets/images/projects/markdown/02-number-guessing-game.jpg"
                   alt="Number Guessing Game"
                 />
                 <figcaption>
@@ -122,7 +175,7 @@
             <a href="/01-background-colour-picker/">
               <figure>
                 <img
-                  src="00-assets/images/projects/01-background-colour-picker.png"
+                  src="00-assets/images/projects/markdown/01-background-colour-picker.png"
                   alt="Background Colour Picker"
                 />
                 <figcaption>
