Update metadata images

--- a/01-background-colour-picker/index.html
+++ b/01-background-colour-picker/index.html
@@ -1,8 +1,34 @@
 <!DOCTYPE html>
 <html lang="en-GB">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"
+    />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+    <meta property="og:title" content="Background Colour Picker 🎨" />
+    <meta
+      property="og:description"
+      content="A random background colour generator"
+    />
+    <meta
+      property="og:url"
+      content="https://vanillajs-only.netlify.app/01-background-colour-picker"
+    />
+    <meta
+      property="og:image"
+      content="https://github.com/kimberlywanst/vanilla-javascript-projects/blob/main/00-assets/images/projects/markdown/01-background-colour-picker.png"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Vanilla JavaScript Projects" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@kimberlywanst" />
+    <meta name="twitter:creator" content="@kimberlywanst" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="shortcut icon" href="assets/images/paint-favicon.ico" />
     <link
