--- a/03-sliding-sign-up-login-form/index.html
+++ b/03-sliding-sign-up-login-form/index.html
@@ -23,7 +23,7 @@
     />
     <meta
       property="og:image"
-      content="../00-assets/images/projects/markdown/03-sliding-sign-up-login-form.png"
+      content="https://github.com/kimberlywanst/vanilla-javascript-projects/blob/main/00-assets/images/projects/markdown/03-sliding-sign-up-login-form.gif"
     />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Vanilla JavaScript Projects" />
