--- a/04-popup-modal-window/index.html
+++ b/04-popup-modal-window/index.html
@@ -13,14 +13,17 @@
       content="black-translucent"
     />
     <meta property="og:title" content="Popup Modal Window " />
-    <meta property="og:description" content="" />
+    <meta
+      property="og:description"
+      content="A popup windows appears when a button is clicked"
+    />
     <meta
       property="og:url"
       content="https://vanillajs-only.netlify.app/04-popup-modal-window"
     />
     <meta
       property="og:image"
-      content="../00-assets/images/projects/markdown/04-popup-modal-window.jpg"
+      content="https://github.com/kimberlywanst/vanilla-javascript-projects/blob/main/00-assets/images/projects/markdown/04-popup-modal-window.png"
     />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Vanilla JavaScript Projects" />
