Update README.md files

--- a/07-keyboard-drum-kit/index.html
+++ b/07-keyboard-drum-kit/index.html
@@ -22,8 +22,11 @@
       property="og:url"
       content="https://vanillajs-only.netlify.app/07-keyboard-drum-kit"
     />
-    <meta property="og:image" content="" />
-    <!-- TODO: absolute URL from GitHub img -->
+    <meta
+      property="og:image"
+      content="https://github.com/kimberlywanst/vanilla-javascript-projects/blob/main/00-assets/images/projects/markdown/07-keyboard-drum-kit.png"
+    />
+
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Vanilla JavaScript Projects" />
     <meta name="twitter:card" content="summary" />
