Update grid layout for mobile

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <main>
       <section>
-        <h1>✨ Vanilla JavaScript Projects ✨</h1>
+        <h1>Vanilla JavaScript Projects 🌙</h1>
         <p>
           A collection of JavaScript projects that I've built using HTML, CSS
           and plain JavaScript
@@ -84,6 +84,23 @@
       <section>
         <h2>Projects</h2>
         <ul class="project-list">
+          <li class="project-item">
+            <a href="/07-keyboard-drum-kit/">
+              <figure>
+                <img
+                  src="00-assets/images/projects/markdown/07-keyboard-drum-kit.png"
+                  alt="Keyboard Drum Kit"
+                />
+                <figcaption>
+                  <div class="project-item-title">Keyboard Drum Kit 🥁</div>
+                  <div class="project-item-content">
+                    Keydown event listener, DOM manipulation
+                  </div>
+                </figcaption>
+              </figure>
+            </a>
+          </li>
+
           <li class="project-item">
             <a href="/06-photo-gallery/">
               <figure>
