--- a/01-background-colour-picker/index.html
+++ b/01-background-colour-picker/index.html
@@ -22,7 +22,7 @@
     />
     <meta
       property="og:image"
-      content="https://github.com/kimberlywanst/vanilla-javascript-projects/blob/main/00-assets/images/projects/markdown/01-background-colour-picker.png"
+      content="https://raw.githubusercontent.com/kimberlywanst/vanilla-javascript-projects/main/00-assets/images/projects/markdown/01-background-colour-picker.png"
     />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Vanilla JavaScript Projects" />
