--- a/06-photo-gallery/index.html
+++ b/06-photo-gallery/index.html
@@ -25,7 +25,7 @@
 
     <meta
       property="og:image"
-      content="https://github.com/kimberlywanst/vanilla-javascript-projects/blob/main/00-assets/images/projects/markdown/06-photo-gallery.png"
+      content="https://raw.githubusercontent.com/kimberlywanst/vanilla-javascript-projects/main/00-assets/images/projects/markdown/06-photo-gallery.png"
     />
 
     <meta property="og:type" content="website" />
