Complete Project #8: Minimal Banking App 💰

--- a/09-workout-mapper/index.html
+++ b/09-workout-mapper/index.html
@@ -64,7 +64,7 @@
       <section class="sidebar">
         <div class="logo">
           <img src="" alt="" />
-          <h1>Workout Mapper</h1>
+          <h1>Workout Mapper 📍</h1>
         </div>
 
         <ul class="workouts">
