--- a/index.html
+++ b/index.html
@@ -85,6 +85,23 @@
         <h2>Projects</h2>
         <ul class="project-list">
           <li class="project-item">
+            <a href="/08-minimal-banking-app/">
+              <figure>
+                <img
+                  src="00-assets/images/projects/markdown/08-minimal-banking-app.png"
+                  alt="Minimal Banking App"
+                />
+                <figcaption>
+                  <div class="project-item-title">Minimal Banking App 💰</div>
+                  <div class="project-item-content">
+                    Arrays, timeout, DOM manipulation
+                  </div>
+                </figcaption>
+              </figure>
+            </a>
+          </li>
+
+          <li class="project-item">
             <a href="/07-keyboard-drum-kit/">
               <figure>
                 <img
@@ -156,7 +173,7 @@
             <a href="/03-sliding-sign-up-login-form">
               <figure>
                 <img
-                  src="00-assets/images/projects/markdown/03-sliding-sign-up-login-form.gif"
+                  src="00-assets/images/projects/markdown/03-sliding-sign-up-login-form.png"
                   alt="Sliding Dual Form"
                 />
                 <figcaption>
