--- a/08-minimal-banking-app/index.html
+++ b/08-minimal-banking-app/index.html
@@ -14,12 +14,19 @@
     />
     <meta property="og:title" content="Minimal Banking App" />
 
-    <meta property="og:description" content="" />
-    <!-- TODO: -->
-    <meta property="og:url" content="https://vanillajs-only.netlify.app/" />
-    <!-- TODO: -->
-    <meta property="og:image" content="" />
-    <!-- TODO: absolute URL from GitHub img -->
+    <meta
+      property="og:description"
+      content="Banking app that allows user to login and view transactions"
+    />
+    <meta
+      property="og:url"
+      content="https://vanillajs-only.netlify.app/08-minimal-banking-app"
+    />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/kimberlywanst/vanilla-javascript-projects/main/00-assets/images/projects/markdown/08-minimal-banking-app.png"
+    />
+
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Vanilla JavaScript Projects" />
     <meta name="twitter:card" content="summary" />
