--- a/09-workout-mapper/index.html
+++ b/09-workout-mapper/index.html
@@ -47,6 +47,20 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+      integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+      crossorigin=""
+    />
+    <script
+      defer
+      src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+      integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+      crossorigin=""
+    ></script>
+    <script defer src="assets/app.js"></script>
+
     <title>Workout Mapper</title>
   </head>
   <body>
@@ -84,6 +98,8 @@
               <label class="form-label">Duration</label>
               <input class="form-input form-input_duration" placeholder="min" />
             </div>
+
+            <!-- Toggle between workout in JS -->
             <div class="form-row">
               <label class="form-label">Cadence</label>
               <input
@@ -98,36 +114,36 @@
                 placeholder="meters"
               />
             </div>
-            <button class="form-button">OK</button>
+            <button class="form-button">Add</button>
           </form>
         </ul>
+
+        <footer>
+          <nav>
+            <ul class="about">
+              <li>
+                Made with <span role="img" aria-label="heart">❤️</span> by
+                Kimberly
+                <span role="img" aria-label="sparkles">✨</span>
+              </li>
+            </ul>
+            <ul class="social">
+              <li>
+                <a href="https://twitter.com/kimberlywanst" target="_blank"
+                  ><span class="fab fa-twitter" aria-hidden="true"></span
+                ></a>
+              </li>
+              <li>
+                <a href="https://github.com/kimberlywanst" target="_blank"
+                  ><span class="fab fa-github" aria-hidden="true"></span
+                ></a>
+              </li>
+            </ul>
+          </nav>
+        </footer>
       </section>
 
       <section id="map"></section>
     </main>
-
-    <footer>
-      <nav>
-        <ul class="about">
-          <li>
-            Made with <span role="img" aria-label="heart">❤️</span> by Kimberly
-            <span role="img" aria-label="sparkles">✨</span>
-          </li>
-        </ul>
-        <ul class="social">
-          <li>
-            <a href="https://twitter.com/kimberlywanst" target="_blank"
-              ><span class="fab fa-twitter" aria-hidden="true"></span
-            ></a>
-          </li>
-          <li>
-            <a href="https://github.com/kimberlywanst" target="_blank"
-              ><span class="fab fa-github" aria-hidden="true"></span
-            ></a>
-          </li>
-        </ul>
-      </nav>
-    </footer>
   </body>
-  <script src="assets/script.js"></script>
 </html>
