Update READMEs and metadata

--- a/09-workout-mapper/index.html
+++ b/09-workout-mapper/index.html
@@ -12,14 +12,21 @@
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
     />
-    <meta property="og:title" content="" />
-    <!-- TODO: -->
-    <meta property="og:description" content="" />
-    <!-- TODO: -->
-    <meta property="og:url" content="https://vanillajs-only.netlify.app/" />
-    <!-- TODO: -->
-    <meta property="og:image" content="" />
-    <!-- TODO: absolute URL from GitHub img -->
+    <meta property="og:title" content="Workout Mapper 📍" />
+    <meta
+      property="og:description"
+      content="Log workouts based on current location using Leaflet library and OpenStreetMap. Existing workouts are saved using local storage.
+    "
+    />
+    <meta
+      property="og:url"
+      content="https://vanillajs-only.netlify.app/09-workout-mapper"
+    />
+
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/kimberlywanst/vanilla-javascript-projects/main/00-assets/images/projects/markdown/09-workout-mapper.jpg"
+    />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Vanilla JavaScript Projects" />
     <meta name="twitter:card" content="summary" />
