Complete Project #9: Workout Mapper 📍

--- a/index.html
+++ b/index.html
@@ -85,6 +85,23 @@
         <h2>Projects</h2>
         <ul class="project-list">
           <li class="project-item">
+            <a href="/09-workout-mapper/">
+              <figure>
+                <img
+                  src="00-assets/images/projects/markdown/09-workout-mapper.jpg"
+                  alt="Workout mapper"
+                />
+                <figcaption>
+                  <div class="project-item-title">Workout Mapper 📍</div>
+                  <div class="project-item-content">
+                    Geolocation, OOP, local storage
+                  </div>
+                </figcaption>
+              </figure>
+            </a>
+          </li>
+
+          <li class="project-item">
             <a href="/08-minimal-banking-app/">
               <figure>
                 <img
