Add metadata image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
       content="A collection of JavaScript projects that I've built using HTML, CSS and plain JavaScript"
     />
     <meta property="og:url" content="https://vanillajs-only.netlify.app/" />
-    <meta property="og:image" content="" />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/kimberlywanst/vanilla-javascript-projects/main/00-assets/images/projects/markdown/showcase.jpg"
+    />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Vanilla JavaScript Projects" />
     <meta name="twitter:card" content="summary" />
