--- a/05-pig-dice-game/index.html
+++ b/05-pig-dice-game/index.html
@@ -23,7 +23,7 @@
     />
     <meta
       property="og:image"
-      content="https://raw.githubusercontent.com/kimberlywanst/vanilla-javascript-projects/main/00-assets/images/projects/markdown/05-pig-dice-game.png"
+      content="https://raw.githubusercontent.com/kimberlywanst/vanilla-javascript-projects/main/00-assets/images/projects/markdown/05-pig-dice-game.jpg"
     />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Vanilla JavaScript Projects" />
