--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <a href="/08-minimal-banking-app/">
               <figure>
                 <img
-                  src="00-assets/images/projects/markdown/08-minimal-banking-app.png"
+                  src="00-assets/images/projects/markdown/08-minimal-banking-app.jpg"
                   alt="Minimal Banking App"
                 />
                 <figcaption>
@@ -125,7 +125,7 @@
             <a href="/07-keyboard-drum-kit/">
               <figure>
                 <img
-                  src="00-assets/images/projects/markdown/07-keyboard-drum-kit.png"
+                  src="00-assets/images/projects/markdown/07-keyboard-drum-kit.jpg"
                   alt="Keyboard Drum Kit"
                 />
                 <figcaption>
@@ -142,7 +142,7 @@
             <a href="/06-photo-gallery/">
               <figure>
                 <img
-                  src="00-assets/images/projects/markdown/06-photo-gallery.png"
+                  src="00-assets/images/projects/markdown/06-photo-gallery.jpg"
                   alt="Photo Gallery"
                 />
                 <figcaption>
@@ -159,7 +159,7 @@
             <a href="/05-pig-dice-game/">
               <figure>
                 <img
-                  src="00-assets/images/projects/markdown/05-pig-dice-game.png"
+                  src="00-assets/images/projects/markdown/05-pig-dice-game.jpg"
                   alt="Pig Dice Game"
                 />
                 <figcaption>
@@ -176,7 +176,7 @@
             <a href="/04-popup-modal-window">
               <figure>
                 <img
-                  src="00-assets/images/projects/markdown/04-popup-modal-window.png"
+                  src="00-assets/images/projects/markdown/04-popup-modal-window.jpg"
                   alt="Popup modal window"
                 />
                 <figcaption>
@@ -193,7 +193,7 @@
             <a href="/03-sliding-sign-up-login-form">
               <figure>
                 <img
-                  src="00-assets/images/projects/markdown/03-sliding-sign-up-login-form.png"
+                  src="00-assets/images/projects/markdown/03-sliding-sign-up-login-form.jpg"
                   alt="Sliding Dual Form"
                 />
                 <figcaption>
@@ -229,7 +229,7 @@
             <a href="/01-background-colour-picker/">
               <figure>
                 <img
-                  src="00-assets/images/projects/markdown/01-background-colour-picker.png"
+                  src="00-assets/images/projects/markdown/01-background-colour-picker.jpg"
                   alt="Background Colour Picker"
                 />
                 <figcaption>
