--- a/04-popup-modal-window/index.html
+++ b/04-popup-modal-window/index.html
@@ -23,7 +23,7 @@
     />
     <meta
       property="og:image"
-      content="https://raw.githubusercontent.com/kimberlywanst/vanilla-javascript-projects/main/00-assets/images/projects/markdown/04-popup-modal-window.png"
+      content="https://raw.githubusercontent.com/kimberlywanst/vanilla-javascript-projects/main/00-assets/images/projects/markdown/04-popup-modal-window.jpg"
     />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Vanilla JavaScript Projects" />
