--- a/07-keyboard-drum-kit/index.html
+++ b/07-keyboard-drum-kit/index.html
@@ -24,7 +24,7 @@
     />
     <meta
       property="og:image"
-      content="https://raw.githubusercontent.com/kimberlywanst/vanilla-javascript-projects/main/00-assets/images/projects/markdown/07-keyboard-drum-kit.png"
+      content="https://raw.githubusercontent.com/kimberlywanst/vanilla-javascript-projects/main/00-assets/images/projects/markdown/07-keyboard-drum-kit.jpg"
     />
 
     <meta property="og:type" content="website" />
