--- a/08-minimal-banking-app/index.html
+++ b/08-minimal-banking-app/index.html
@@ -24,7 +24,7 @@
     />
     <meta
       property="og:image"
-      content="https://raw.githubusercontent.com/kimberlywanst/vanilla-javascript-projects/main/00-assets/images/projects/markdown/08-minimal-banking-app.png"
+      content="https://raw.githubusercontent.com/kimberlywanst/vanilla-javascript-projects/main/00-assets/images/projects/markdown/08-minimal-banking-app.jpg"
     />
 
     <meta property="og:type" content="website" />
