--- a/index.html
+++ b/index.html
@@ -79,13 +79,12 @@
       <section>
         <h1>Vanilla JavaScript Projects 🌙</h1>
         <p>
-          A collection of JavaScript projects that I've built using HTML, CSS
-          and plain JavaScript
+          A collection of JavaScript projects that I've built from scratch using
+          HTML, CSS and plain JavaScript
         </p>
       </section>
 
       <section>
-        <h2>Projects</h2>
         <ul class="project-list">
           <li class="project-item">
             <a href="/09-workout-mapper/">
